tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_no_such_field_in_match_struct_pattern/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: no such field z defined in struct Foo
  ┌─ src/main.nr:5:31
  │
5 │             Foo { x: _, y: _, z: _ } => {}
  │                               -
  │

Aborting due to 1 previous error
